Add benchmark for trivially copyable