@@ -1,7 +1,8 @@
 package blog.vanillajava.triviallycopyable;
 
-import blog.vanillajava.decimal.MyBenchmark;
 import net.openhft.chronicle.bytes.Bytes;
+import net.openhft.chronicle.wire.BinaryWire;
+import net.openhft.chronicle.wire.Wire;
 import org.openjdk.jmh.annotations.*;
 import org.openjdk.jmh.runner.Runner;
 import org.openjdk.jmh.runner.RunnerException;
@@ -11,6 +12,27 @@ import org.openjdk.jmh.runner.options.OptionsBuilder;
 import static java.util.concurrent.TimeUnit.MILLISECONDS;
 import static java.util.concurrent.TimeUnit.NANOSECONDS;
 
+/* Options required on Java 17+ to run this benchmark:
+--add-exports=java.base/jdk.internal.misc=ALL-UNNAMED
+--add-exports=java.base/jdk.internal.ref=ALL-UNNAMED
+--add-exports=java.base/jdk.internal.util=ALL-UNNAMED
+--add-exports=java.base/sun.nio.ch=ALL-UNNAMED
+--add-exports=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED
+--add-exports=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED
+--add-exports=jdk.unsupported/sun.misc=ALL-UNNAMED
+--add-opens=java.base/java.io=ALL-UNNAMED
+--add-opens=java.base/java.lang=ALL-UNNAMED
+--add-opens=java.base/java.lang.reflect=ALL-UNNAMED
+--add-opens=java.base/java.util=ALL-UNNAMED
+--add-opens=jdk.compiler/com.sun.tools.javac=ALL-UNNAMED
+ */
+/* Run on an Intel I7-10710U
+Benchmark                              Mode  Cnt     Score    Error  Units
+BenchmarkRunner.defaultWriteRead       avgt   25  1708.038 ± 13.975  ns/op
+BenchmarkRunner.defaultBytesWriteRead  avgt   25   495.976 ± 10.731  ns/op
+BenchmarkRunner.explicitWriteRead      avgt   25    47.820 ±  1.391  ns/op
+BenchmarkRunner.trivialWriteRead       avgt   25    32.289 ±  0.939  ns/op
+ */
 @State(Scope.Benchmark)
 @BenchmarkMode(Mode.AverageTime)
 @OutputTimeUnit(NANOSECONDS)
@@ -20,53 +42,44 @@ import static java.util.concurrent.TimeUnit.NANOSECONDS;
 public class BenchmarkRunner {
 
     private final MarketData defaultMarketData = new DefaultMarketData();
+    private final MarketData defaultMarketData2 = new DefaultMarketData();
+    private final MarketData defaultBytesMarketData = new DefaultBytesMarketData();
+    private final MarketData defaultBytesMarketData2 = new DefaultBytesMarketData();
     private final MarketData explicitMarketData = new ExplicitMarketData();
+    private final MarketData explicitMarketData2 = new ExplicitMarketData();
     private final MarketData triviallyCopyableMarketData = new TriviallyCopyableMarketData();
-    private final Bytes<Void> toBytes = Bytes.allocateElasticDirect();
-    private final Bytes<Void> fromBytesDefault = Bytes.allocateElasticDirect();
-    private final Bytes<Void> fromBytesExplicit = Bytes.allocateElasticDirect();
-    private final Bytes<Void> fromBytesTriviallyCopyable = Bytes.allocateElasticDirect();
+    private final MarketData triviallyCopyableMarketData2 = new TriviallyCopyableMarketData();
+    private final Bytes<Void> bytes = Bytes.allocateElasticDirect();
+    private final Wire wire = BinaryWire.binaryOnly(bytes);
 
     public BenchmarkRunner() {
-        defaultMarketData.writeMarshallable(fromBytesDefault);
-        explicitMarketData.writeMarshallable(fromBytesExplicit);
-        triviallyCopyableMarketData.writeMarshallable(fromBytesTriviallyCopyable);
     }
 
     @Benchmark
-    public void defaultWrite() {
-        toBytes.writePosition(0);
-        defaultMarketData.writeMarshallable(toBytes);
+    public void defaultWriteRead() {
+        bytes.clear();
+        wire.getValueOut().marshallable(defaultMarketData);
+        wire.getValueIn().marshallable(defaultMarketData2);
+    }
+    @Benchmark
+    public void defaultBytesWriteRead() {
+        bytes.clear();
+        wire.getValueOut().marshallable(defaultBytesMarketData);
+        wire.getValueIn().marshallable(defaultBytesMarketData2);
     }
 
     @Benchmark
-    public void defaultRead() {
-        fromBytesDefault.readPosition(0);
-        defaultMarketData.readMarshallable(fromBytesDefault);
+    public void explicitWriteRead() {
+        bytes.clear();
+        wire.getValueOut().marshallable(explicitMarketData);
+        wire.getValueIn().marshallable(explicitMarketData2);
     }
 
     @Benchmark
-    public void explicitWrite() {
-        toBytes.writePosition(0);
-        explicitMarketData.writeMarshallable(toBytes);
-    }
-
-    @Benchmark
-    public void explicitRead() {
-        fromBytesExplicit.readPosition(0);
-        explicitMarketData.readMarshallable(fromBytesExplicit);
-    }
-
-    @Benchmark
-    public void trivialWrite() {
-        toBytes.writePosition(0);
-        triviallyCopyableMarketData.writeMarshallable(toBytes);
-    }
-
-    @Benchmark
-    public void trivialRead() {
-        fromBytesTriviallyCopyable.readPosition(0);
-        triviallyCopyableMarketData.readMarshallable(fromBytesTriviallyCopyable);
+    public void trivialWriteRead() {
+        bytes.clear();
+        wire.getValueOut().marshallable(triviallyCopyableMarketData);
+        wire.getValueIn().marshallable(triviallyCopyableMarketData2);
     }
 
     public static void main(String[] args) throws RunnerException {
